--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server",
+    "run": "node server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
